<resources>
    <string name="app_name">ConRead</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_sig_nup">Sign in</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="login_text">LOG IN</string>
    <string name="sign_up_text">SIGN UP</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="graph_text">Graph of Consumption</string>
    <string name="about_us_text">About Us</string>
    <string name="user_profile_text">Users Profile</string>
    <string name="address_text">Address:</string>
    <string name="contact_no_text">Contact No:</string>
    <string name="name_text">Name:</string>
    <string name="ast_text">*</string>
    <string name="user_name2_text">Username:</string>
    <string name="note_text">* Can be edited.</string>
    <string name="pass_text">Password:</string>
    <string name="edit_text">Edit</string>
    <string name="new_pass_text">New Password:</string>
    <string name="rewrite_pass_text">Re-type Password:</string>
    <string name="last_name_text">Last Name:</string>
    <string name="first_text">First Name:</string>
    <string name="image_user"> </string>
    <string name="cancel_text">Cancel</string>
    <string name="reminder_text">Asterisk(*) must be filled up.</string>
    <string name="middle_text">Middle Name:</string>
    <string name="upload_text">Upload Photo</string>
    <string name="date_text">Date Captured:</string>
    <string name="image_view">Image View</string>
    <string name="ok_text">OK</string>
    <string name="whole_name_text"> </string>
    <string name="save_text">Save</string>
    <string name="generate_date">Generated Date:</string>
    <string name="blanks">________</string>
    <string name="previous_data">Previous Data:</string>
    <string name="read_data">Read Data:</string>
    <string name="computation">Computation:</string>
    <string name="minimum_rate">Minimum Rate:</string>
    <string name="final_comptutaion">Final Computation:</string>
    <string name="expeccted_budget">Expected Budget:</string>
    <string name="expected_days">Expected Days:</string>
    <string name="process">Process</string>
    <string name="electricity">ELECTRICITY</string>
    <string name="water">WATER</string>
    <string name="no_ast"> </string>
    <string name="due_dates"> Due dates:</string>
    <string name="device_used">Device used</string>
    <string name="consumption_device">Consumption/Devices</string>
    <string name="email">Email:</string>
    <string name="electric_fan">Electric Fan:</string>
    <string name="television">Television:</string>
    <string name="radio">Radio:</string>
    <string name="flat_iron">Flat Iron:</string>
    <string name="rice_cooker">Rice Cooker:</string>
    <string name="refrigirator">Refrigirator:</string>
    <string name="laptop">Laptop:</string>
    <string name="cellphone">Cellphone:</string>
    <string name="dvd">DVD:</string>
    <string-array name="spinner1_item">
        <item>Jan</item>
        <item>Feb</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>Aug</item>
        <item>Sept</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string-array name="spinner2_item">
        <item>1</item><item>2</item><item>3</item><item>4</item><item>5</item><item>6</item><item>7</item><item>8</item><item>9</item><item>10</item><item>11</item><item>12</item>
        <item>13</item><item>14</item><item>15</item><item>16</item><item>17</item><item>18</item><item>19</item><item>20</item><item>21</item><item>22</item><item>23</item><item>24</item>
        <item>25</item><item>26</item><item>26</item><item>28</item><item>29</item><item>30</item><item>31</item>
    </string-array>
    <string-array name="spinner3_item">
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
        <item>20001</item>
    </string-array>
    <!-- Strings related to login -->


</resources>
