<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.faithanalie.conread.Tab_menu">


    <Button
        android:text="@string/edit_text"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:background="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="87dp"
        android:id="@+id/edit" />

    <TextView
        android:text="@string/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:layout_marginTop="46dp"
        android:id="@+id/name"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/address_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:id="@+id/address"
        android:layout_alignBottom="@+id/addressText"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/pass_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:id="@+id/password"
        android:layout_below="@+id/usernameText"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <EditText
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:background="@color/colorAccent"
        android:hint="@string/ast_text"
        android:ems="10"
        android:id="@+id/usernameText"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/contactno.Text"
        android:layout_alignStart="@+id/contactno.Text" />

    <EditText
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:background="@color/colorAccent"
        android:hint="@string/ast_text"
        android:ems="10"
        android:layout_alignTop="@+id/password"
        android:layout_alignStart="@+id/usernameText"
        android:id="@+id/passwordText" />

    <TextView
        android:text="@string/note_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#2a2a2a"
        android:id="@+id/reminder"
        android:layout_below="@+id/passwordText"
        android:layout_alignStart="@+id/username"
        android:layout_marginTop="27dp" />

    <EditText
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/whole_name_text"
        android:background="@color/colorAccent"
        android:ems="10"
        android:id="@+id/nameText"
        android:layout_alignBottom="@+id/name"
        android:layout_toEndOf="@+id/reminder" />

    <EditText
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:background="@color/colorAccent"
        android:hint="@string/ast_text"
        android:ems="10"
        android:id="@+id/contactno.Text"
        android:layout_alignTop="@+id/contact_no."
        android:layout_alignStart="@+id/addressText" />

    <TextView
        android:text="@string/contact_no_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:layout_marginTop="15dp"
        android:id="@+id/contact_no."
        android:layout_below="@+id/address"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/user_name2_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:id="@+id/username"
        android:layout_alignTop="@+id/usernameText"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:background="@color/colorAccent"
        android:hint="@string/ast_text"
        android:ems="10"
        android:id="@+id/addressText"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/nameText"
        android:layout_alignStart="@+id/nameText" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/use"
        android:id="@+id/imageView"
        android:contentDescription="@string/image_user"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
