<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_forgot_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/login"
    tools:context="com.example.faithanalie.conread.ForgotPassword">


    <Button
        android:text="@string/cancel_text"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:textColor="#2a2"
        android:id="@+id/cancel"
        android:background="?attr/colorBackgroundFloating"
        android:layout_alignTop="@+id/login"
        android:layout_toEndOf="@+id/login" />

    <Button
        android:text="@string/login_text"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:textColor="#ffffff"

        android:id="@+id/login"
        android:background="@color/colorPrimaryDark"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="82dp" />

    <TextView
        android:text="@string/reminder_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:layout_marginBottom="13dp"
        android:id="@+id/textView"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/user_name2_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:id="@+id/username"
        android:layout_alignBottom="@+id/usernameText"
        android:layout_alignParentStart="true" />

    <EditText
        android:hint="@string/ast_text"
        android:inputType="textPassword"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:background="#ffffff"
        android:textColor="#f17a0a"
        android:id="@+id/newpasswordText"
        android:layout_alignBottom="@+id/new_pass"
        android:layout_toEndOf="@+id/new_pass" />

    <TextView
        android:text="@string/new_pass_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:id="@+id/new_pass"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/usernameText"
        android:layout_alignParentStart="true" />

    <EditText
        android:hint="@string/ast_text"
        android:inputType="textPassword"
        android:layout_width="180dp"
        android:layout_height="25dp"
        android:background="#ffffff"
        android:textColor="#f17a0a"
        android:id="@+id/rewritepassText"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/newpasswordText"
        android:layout_toEndOf="@+id/rewrite_pass" />

    <EditText
        android:hint="@string/ast_text"
        android:inputType="textPersonName"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:background="#ffffff"
        android:textColor="#f17a0a"
        android:id="@+id/lastnameText"
        android:layout_alignBottom="@+id/last_name"
        android:layout_toEndOf="@+id/new_pass" />

    <TextView
        android:text="@string/rewrite_pass_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:id="@+id/rewrite_pass"
        android:layout_alignTop="@+id/rewritepassText"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/last_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:id="@+id/last_name"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/rewritepassText"
        android:layout_alignEnd="@+id/first_name" />

    <TextView
        android:text="@string/first_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:id="@+id/first_name"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/last_name"
        android:layout_alignParentStart="true" />

    <EditText
        android:hint="@string/ast_text"
        android:inputType="textPersonName"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:background="#ffffff"
        android:textColor="#f17a0a"
        android:id="@+id/firstnameText"
        android:layout_alignBottom="@+id/first_name"
        android:layout_alignEnd="@+id/rewritepassText" />

    <TextView
        android:text="@string/contact_no_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:id="@+id/contact_no."
        android:layout_marginTop="18dp"
        android:layout_below="@+id/first_name"
        android:layout_alignStart="@+id/last_name" />

    <EditText
        android:hint="@string/no_ast"
        android:inputType="textPersonName"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:background="#ffffff"
        android:textColor="#f17a0a"
        android:id="@+id/usernameText"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/newpasswordText" />

    <EditText
        android:hint="@string/ast_text"
        android:inputType="textPersonName"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:background="#ffffff"
        android:textColor="#f17a0a"
        android:id="@+id/contactno.Text"
        android:layout_alignBottom="@+id/contact_no."
        android:layout_alignStart="@+id/firstnameText" />
</RelativeLayout>
