<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_edit__profile"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
tools:context="com.example.faithanalie.conread.Edit_Profile">

<ImageView
    android:layout_width="200dp"
    android:layout_height="70dp"
    android:contentDescription="@string/image_view"
    app:srcCompat="@drawable/use"
    android:id="@+id/imageView3"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true" />

<TextView
    android:text="@string/name_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="#000"
    android:id="@+id/name"
    android:layout_below="@+id/imageView3"
    android:layout_alignParentStart="true"
    android:layout_marginTop="16dp" />

<EditText
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:inputType="textPersonName"
    android:hint=""
    android:background="@color/colorAccent"
    android:ems="10"
    android:id="@+id/nameText"
    android:layout_alignBaseline="@+id/name"
    android:layout_alignBottom="@+id/name"
    android:layout_alignStart="@+id/imageView3" />


<TextView
    android:text="@string/contact_no_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="#000"
    android:id="@+id/contact_no."
    android:layout_marginTop="12dp"
    android:layout_below="@+id/address"
    android:layout_alignParentStart="true" />

<TextView
    android:text="@string/user_name2_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="#000"
    android:id="@+id/username"
    android:layout_below="@+id/contact_no."
    android:layout_alignParentStart="true"
    android:layout_marginTop="11dp" />

<TextView
    android:text="@string/pass_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="#000"
    android:id="@+id/pass"
    android:layout_below="@+id/username"
    android:layout_alignEnd="@+id/username"
    android:layout_marginTop="11dp" />

    <TextView
    android:text="@string/address_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="#000"
    android:layout_marginTop="15dp"
    android:id="@+id/address"
    android:layout_below="@+id/nameText"
    android:layout_alignParentStart="true" />

<EditText
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:inputType="textPersonName"
    android:hint="@string/ast_text"
    android:background="@color/colorAccent"
    android:ems="10"
    android:id="@+id/addressText"
    android:layout_above="@+id/contact_no."
    android:layout_alignStart="@+id/nameText" />

<EditText
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:inputType="textPersonName"
    android:hint="@string/ast_text"
    android:background="@color/colorAccent"
    android:ems="10"
    android:id="@+id/contactText"
    android:layout_alignBottom="@+id/contact_no."
    android:layout_alignStart="@+id/addressText" />

<EditText
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:inputType="textPersonName"
    android:hint="@string/ast_text"
    android:background="@color/colorAccent"
    android:ems="10"
    android:id="@+id/usernameText"
    android:layout_alignBaseline="@+id/username"
    android:layout_alignBottom="@+id/username"
    android:layout_alignStart="@+id/contactText" />

<EditText
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:inputType="textPassword"
    android:hint="@string/ast_text"
    android:background="@color/colorAccent"
    android:ems="10"
    android:id="@+id/passwordText"
    android:layout_alignBaseline="@+id/pass"
    android:layout_alignBottom="@+id/pass"
    android:layout_alignStart="@+id/usernameText" />

    <TextView
    android:text="@string/new_pass_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="#000"
    android:id="@+id/new_pass"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/rewrite_pass_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:id="@+id/rewrite_pass"
        android:layout_below="@+id/newpasswordText"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp" />

    <EditText
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/ast_text"
        android:background="@color/colorAccent"
        android:ems="10"
        android:id="@+id/rewritepassText"
        android:layout_alignBottom="@+id/rewrite_pass"
        android:layout_toEndOf="@+id/rewrite_pass" />

    <EditText
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/ast_text"
        android:background="@color/colorAccent"
        android:ems="10"
        android:id="@+id/newpasswordText"
        android:layout_alignBottom="@+id/new_pass"
        android:layout_toEndOf="@+id/new_pass" />

    <Button
        android:text="@string/cancel_text"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:textColor="#000"
        android:background="@android:color/darker_gray"
        android:id="@+id/cancel"
        android:layout_alignBottom="@+id/save"
        android:layout_toEndOf="@+id/passwordText"
        android:layout_alignTop="@+id/save" />

    <Button
    android:text="@string/save_text"
    android:layout_width="80dp"
    android:layout_height="35dp"
    android:background="@color/colorAccent"
    android:id="@+id/save"
        android:layout_marginBottom="63dp"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/rewritepassText"
        android:layout_marginEnd="15dp" />

</RelativeLayout>
