<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.faithanalie.conread.Sign_in">


    <Button
        android:text="@string/sign_up_text"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:textColor="#2a2"
        android:id="@+id/sign_up"
        android:background="?attr/colorBackgroundFloating"
        android:layout_marginBottom="54dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="onButtonClick (Sign_in)" />

    <Button
        android:text="@string/login_text"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:textColor="#ffffff"
        android:id="@+id/login"
        android:background="@color/colorPrimaryDark"
        android:layout_marginBottom="11dp"
        android:layout_above="@+id/sign_up"
        android:layout_alignStart="@+id/sign_up"
        android:onClick="onButtonClick (Sign_in)" />

    <TextView
        android:text="@string/forgot_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:textColor="#2a2a2a"
        android:id="@+id/forgotpassword"
        android:layout_above="@+id/login"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logofinal"
        android:contentDescription="@string/image_view"
        android:id="@+id/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:background="#ffffff"
        android:paddingBottom="20dp"
        android:hint="@string/password_text"
        android:ems="10"
        android:id="@+id/passwordText"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/usernameText"
        android:layout_alignStart="@+id/usernameText" />

    <EditText
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:background="#ffffff"
        android:paddingBottom="20dp"
        android:hint="@string/username_text"
        android:ems="10"
        android:id="@+id/usernameText"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
