<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_consumption_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.faithanalie.conread.Consumption_page">

    <ImageView
        android:contentDescription="@string/image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="?attr/actionModeCloseDrawable"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/back" />

    <TextView
        android:text="@string/generate_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:layout_below="@+id/back"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp"
        android:id="@+id/generated" />

    <TextView
        android:hint="@string/blanks"
        android:textColor="#000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/generated"
        android:layout_toEndOf="@+id/generated"
        android:id="@+id/gen_dateText" />

    <TextView
        android:text="@string/previous_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:id="@+id/previous"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/generated"
        android:layout_alignParentStart="true" />

    <TextView
        android:hint="@string/blanks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/prev_dateText"
        android:layout_alignBaseline="@+id/previous"
        android:layout_alignBottom="@+id/previous"
        android:layout_toEndOf="@+id/generated" />

    <TextView
        android:text="@string/read_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:id="@+id/read"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/previous"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/computation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:id="@+id/computation"
        android:layout_below="@+id/read"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp" />

    <TextView
        android:hint="@string/blanks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/computeText"
        android:layout_alignBaseline="@+id/computation"
        android:layout_alignBottom="@+id/computation"
        android:layout_alignStart="@+id/read_dataText" />

    <TextView
        android:text="@string/minimum_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:id="@+id/minimum"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/computation"
        android:layout_alignParentStart="true" />

    <TextView
        android:hint="@string/blanks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/minimumrateText"
        android:layout_alignBaseline="@+id/minimum"
        android:layout_alignBottom="@+id/minimum"
        android:layout_alignStart="@+id/computeText" />

    <TextView
    android:text="@string/final_comptutaion"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
        android:textColor="#000"
    android:id="@+id/final_com"
    android:layout_marginTop="11dp"
        android:layout_below="@+id/minimum"
        android:layout_alignParentStart="true" />

    <TextView
        android:hint="@string/blanks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/finalcomputationText"
        android:layout_alignBaseline="@+id/final_com"
        android:layout_alignBottom="@+id/final_com"
        android:layout_toEndOf="@+id/final_com" />

    <TextView
        android:text="@string/expeccted_budget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:id="@+id/expected_budget"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:background="@color/colorAccent"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/expected_budget"
        android:layout_toEndOf="@+id/final_com"
        android:id="@+id/budgetText" />

    <TextView
        android:text="@string/expected_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:id="@+id/expected_days"
        android:layout_below="@+id/expected_budget"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp" />

    <TextView
        android:background="@color/colorAccent"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/expecteddayText"
        android:layout_alignBaseline="@+id/expected_days"
        android:layout_alignBottom="@+id/expected_days"
        android:layout_alignStart="@+id/budgetText" />

    <TextView
        android:hint="@string/blanks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/read_dataText"
        android:layout_above="@+id/computation"
        android:layout_alignStart="@+id/prev_dateText" />

    <Button
        android:text="@string/process"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:background="@color/colorPrimary"
        android:layout_marginTop="22dp"
        android:id="@+id/process"
        android:layout_below="@+id/expected_days"
        android:layout_alignParentStart="true" />


</RelativeLayout>
