<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.faithanalie.conread.Tab_menu">

    <TextView
        android:text="@string/date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/date"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/upload"
        android:layout_toStartOf="@+id/upload" />

    <Button
        android:text="@string/ok_text"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/image"
        android:layout_marginBottom="63dp"
        android:id="@+id/ok" />


    <ImageView
        android:layout_width="300dp"
        android:layout_height="210dp"
        android:contentDescription="@string/image_view"
        app:srcCompat="@android:drawable/ic_menu_gallery"
        android:id="@+id/image"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/upload_text"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:id="@+id/upload"
        android:background="@drawable/button2"
        android:layout_below="@+id/image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp" />



</RelativeLayout>
